# intifybrowser

./: .gitignore  README.md
chromium/: args.gn
docs/: ARCHITECTURE.md  SECURITY.md
install/: linux.sh  windows.ps1
launcher/: Cargo.toml
launcher/src/: chromium.rs  container.rs  crypto.rs  lib.rs  main.rs  memlock.rs  mount.rs  scrub.rs  watchdog.rs
packaging/windows/: build-installer.ps1  build-msi.ps1  installer.iss  main.wxs
