[package]
name = "intifybrowser-launcher"
version = "0.1.0"
edition = "2021"
description = "Portable self-encrypting Chromium launcher (VeraCrypt-style vault)"
license = "Apache-2.0"

[[bin]]
name = "ifb"
path = "src/main.rs"

[dependencies]
aes-gcm       = { version = "0.10", features = ["aes", "std"] }
argon2        = { version = "0.5", features = ["std"] }
blake3        = "1.5"
rand          = "0.8"
rand_core     = { version = "0.6", features = ["std"] }
zeroize       = { version = "1.8", features = ["zeroize_derive"] }
subtle        = "2.5"
anyhow        = "1"
thiserror     = "1"
clap          = { version = "4", features = ["derive"] }
rpassword     = "7"
log           = "0.4"
env_logger    = "0.11"

[target.'cfg(unix)'.dependencies]
nix           = { version = "0.28", features = ["mount", "fs", "signal", "process", "mman"] }
libc          = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys   = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
